FIX: Alignment in Project Dropdown Menu

--- a/Assets/css/tag-manager.css
+++ b/Assets/css/tag-manager.css
@@ -462,3 +462,8 @@ li.task-tag {
 .disabled-link {
     cursor: context-menu;
 }
+
+.tag-manager-menu svg {
+    vertical-align: middle;
+    margin-right: 3px;
+}
